Add class to bike for movement

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         xmlns="http://www.w3.org/2000/svg"
       >
         <g id="transport-new">
-          <g id="Group">
+          <g class="rider-plus-bike" id="Group">
             <g id="Group_2">
               <g id="rear-wheel">
                 <path
@@ -112,7 +112,7 @@
                   stroke="#ABABAB"
                 />
               </g>
-              <g class="bounce" id="Group_3">
+              <g class="bounce" id="box">
                 <path
                   id="Vector_3"
                   d="M225 299H178V348H225V299Z"
@@ -132,7 +132,8 @@
                 />
               </g>
               <path
-                id="Vector_13"
+                class="bounce"
+                id="car-seat"
                 d="M219.5 349.586V370.086V384.086H310.5V364.586C310.5 356.302 303.784 349.586 295.5 349.586H219.5Z"
                 fill="#171821"
               />
