Add `bounce` class to body of rider

--- a/index.html
+++ b/index.html
@@ -112,20 +112,23 @@
                   stroke="#ABABAB"
                 />
               </g>
-              <g class="bounce" id="box">
+              <g id="box">
                 <path
+                  class="bounce"
                   id="Vector_3"
                   d="M225 299H178V348H225V299Z"
                   fill="#2B6A6B"
                   stroke="#2B6A6B"
                 />
                 <path
+                  class="bounce"
                   id="Vector_4"
                   d="M163.5 299H163V299.5V347.5V348H163.5H215H215.5V347.5V299.5V299H215H194.5H180H163.5Z"
                   fill="#7AB8B9"
                   stroke="#7AB8B9"
                 />
                 <path
+                  class="bounce"
                   id="Vector_8"
                   d="M204.905 322.771C204.827 320.52 204.32 318.308 203.409 316.246C203.27 315.94 203.135 315.638 202.979 315.349C202.823 315.06 202.697 314.862 202.55 314.625C199.825 310.174 194.954 307.466 189.713 307.5C179.259 307.5 174.5 315.824 174.5 323.561C174.5 331.297 179.727 339.53 189.713 339.53C194.559 339.53 199.635 337.344 202.528 332.738C202.675 332.505 202.823 332.268 202.957 332.035C203.109 331.755 203.252 331.457 203.387 331.164C204.441 328.818 204.966 326.273 204.927 323.707V323.427L204.905 322.771ZM189.713 333.626C184.061 333.626 180.252 329.646 180.252 323.69C180.252 317.441 183.965 313.4 189.713 313.4C195.461 313.4 199.17 317.536 199.17 323.69C199.17 329.844 195.461 333.626 189.713 333.626Z"
                   fill="white"
@@ -133,12 +136,13 @@
               </g>
               <path
                 class="bounce"
-                id="car-seat"
+                id="seat"
                 d="M219.5 349.586V370.086V384.086H310.5V364.586C310.5 356.302 303.784 349.586 295.5 349.586H219.5Z"
                 fill="#171821"
               />
               <path
-                id="Vector_14"
+                class="bounce"
+                id="inner-thigh"
                 d="M325.5 347.586C315 342.508 273.5 337.086 273.5 337.086V367.586H321C330.188 360.458 336 352.664 325.5 347.586Z"
                 fill="#18324A"
               />
@@ -157,13 +161,14 @@
                 fill="#78437B"
               />
               <path
-                id="Vector_16"
+                class="bounce"
+                id="shoe"
                 d="M256.153 415.933L261.383 410.703C262.038 410.048 263.057 409.929 263.845 410.414L281.407 421.221C281.791 421.457 282.084 421.817 282.238 422.241L283.881 426.758C283.96 426.975 284.076 427.177 284.224 427.354L287.933 431.806C288.551 432.547 288.551 433.625 287.933 434.366L285.2 437.646C284.525 438.456 283.337 438.603 282.485 437.982L256.39 418.963C255.397 418.24 255.285 416.801 256.153 415.933Z"
                 fill="#171821"
                 stroke="#171821"
                 stroke-linejoin="round"
               />
-              <g id="Group_4">
+              <g id="arms">
                 <path
                   id="Vector_19"
                   d="M303 323.975L308.775 316.586L324 323.447L345 326.614L342.9 335.586L320.85 331.892L303 323.975Z"
@@ -191,32 +196,35 @@
                 />
               </g>
               <path
-                id="Vector_24"
+                class="bounce"
+                id="outer-thigh"
                 d="M263.501 366.586C237.449 367.384 233.913 360.608 239.001 341.086L247.001 335.586L310.001 359.086C316.077 361.375 317.845 364.152 318.59 368.817C318.976 371.229 318.189 373.662 316.717 375.611L282.001 421.586L262.501 409.586L288.001 374.586L263.501 366.586Z"
                 fill="#1C3D5A"
               />
               <path
-                id="Vector_25"
+                id="face"
                 d="M301.814 261.103C298.824 258.513 297.585 256.497 296.08 252.008L277.692 254.974L272.552 279.689L282.635 288.586L285.997 283.248L292.719 282.852C297.743 282.199 300.869 281.918 301.616 280.084L298.848 264.464L303 262.289L301.814 261.103Z"
                 fill="#F8858A"
               />
               <path
-                id="Vector_26"
+                id="chin-strap"
                 d="M286.226 283.246L278.483 276.921L280.065 275.734L290.774 282.987L288.5 283.106L286.226 283.246Z"
                 fill="white"
               />
               <path
-                id="Vector_27"
+                class="bounce"
+                id="helmet"
                 d="M285.703 237.555C293.756 239.331 297.141 243.539 298.548 250.958C298.743 251.989 298.052 252.968 297.025 253.186L287.303 255.248C286.421 255.435 285.784 256.203 285.763 257.104L285.607 263.802C285.475 269.507 285.33 274.649 280.273 277.292C272.498 281.357 261.727 274.375 259.287 265.947C259.239 265.78 259.191 265.612 259.143 265.443C258.438 262.964 258.097 260.385 258.196 257.81C258.508 249.72 260.045 244.415 268.694 239.928C273.9 237.226 279.976 236.293 285.703 237.555Z"
                 fill="#171821"
               />
               <path
-                id="Vector_28"
+                id="mouth"
                 d="M298.315 272.516L298.602 269.736L294.875 269.309L291.147 268.882L290.86 271.662C293.558 274.613 295.173 274.873 298.315 272.516Z"
                 fill="white"
               />
               <path
-                id="Vector_29"
+                class="bounce"
+                id="rider-body"
                 d="M280.206 281.746L275.119 279.894C264.739 276.117 253.262 281.468 249.485 291.848L237.996 323.413C234.218 333.792 239.57 345.269 249.949 349.047L255.036 350.898C265.416 354.676 276.893 349.324 280.671 338.945L292.159 307.38C295.937 297.001 290.585 285.524 280.206 281.746Z"
                 fill="#E4AE50"
               />
