Add bounce class to rider head and arms

--- a/index.html
+++ b/index.html
@@ -291,26 +291,31 @@
               />
               <g id="arms">
                 <path
+                  class="bounce"
                   id="Vector_19"
                   d="M303 323.975L308.775 316.586L324 323.447L345 326.614L342.9 335.586L320.85 331.892L303 323.975Z"
                   fill="#FF8A8F"
                 />
                 <path
+                  class="bounce"
                   id="Vector_20"
                   d="M309 336.586L300.5 328.086L305.5 323.086L317.5 330.086L340 338.586L337 346.586L309 336.586Z"
                   fill="#F8858A"
                 />
                 <path
+                  class="bounce"
                   id="Vector_21"
                   d="M345 352.586C349.418 352.586 353 349.004 353 344.586C353 340.168 349.418 336.586 345 336.586C340.582 336.586 337 340.168 337 344.586C337 349.004 340.582 352.586 345 352.586Z"
                   fill="#F8858A"
                 />
                 <path
+                  class="bounce"
                   id="Vector_22"
                   d="M310 316.89L292.638 301.586L286 307.803L302.851 323.586L303.362 323.108L310 316.89Z"
                   fill="#EBB353"
                 />
                 <path
+                  class="bounce"
                   id="Vector_23"
                   d="M307.5 323.086L290.5 307.086L284 313.586L300.5 330.086L301 329.586L307.5 323.086Z"
                   fill="#E4AE50"
@@ -323,11 +328,13 @@
                 fill="#1C3D5A"
               />
               <path
+                class="bounce"
                 id="face"
                 d="M301.814 261.103C298.824 258.513 297.585 256.497 296.08 252.008L277.692 254.974L272.552 279.689L282.635 288.586L285.997 283.248L292.719 282.852C297.743 282.199 300.869 281.918 301.616 280.084L298.848 264.464L303 262.289L301.814 261.103Z"
                 fill="#F8858A"
               />
               <path
+                class="bounce"
                 id="chin-strap"
                 d="M286.226 283.246L278.483 276.921L280.065 275.734L290.774 282.987L288.5 283.106L286.226 283.246Z"
                 fill="white"
@@ -339,6 +346,7 @@
                 fill="#171821"
               />
               <path
+                class="bounce"
                 id="mouth"
                 d="M298.315 272.516L298.602 269.736L294.875 269.309L291.147 268.882L290.86 271.662C293.558 274.613 295.173 274.873 298.315 272.516Z"
                 fill="white"
