--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         viewBox="0 0 623 558"
         fill="none"
         xmlns="http://www.w3.org/2000/svg"
+        class="rider-svg"
       >
         <g id="transport-new">
           <g class="rider-plus-bike" id="Group">
