still animations on dashboard and make jug move down

--- a/transport.html
+++ b/transport.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Transport</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="transport.css" />
   </head>
   <body>
     <div class="transport-animation">
