--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
   <head>
     <title>Animation</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="ingredients.css" />
-    <link rel="stylesheet" href="panflip.css" />
+    <!-- <link rel="stylesheet" href="ingredients.css" /> -->
+    <!-- <link rel="stylesheet" href="panflip.css" /> -->
+    <!-- <link rel="stylesheet" href="transport.css" /> -->
   </head>
   <body>
     <h1>Team Motion</h1>
