Use Poppins as font and remove underline underneath hyperlinks

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
   <head>
-    <title>Animation</title>
+    <title>Animations</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Team Motion</h1>
@@ -51,8 +57,13 @@
         />
       </g>
     </svg>
-    <button><a href="/panflip.html">Panflip</a></button>
+
     <br />
+
+    <button>
+      <a href="/panflip.html">Panflip</a>
+    </button>
+
     <div class="mix">
       <svg
         width="190"
@@ -177,9 +188,11 @@
       </svg>
     </div>
 
-    <button><a href="/mix.html">Mixy mixy</a></button>
-
     <br />
+
+    <button>
+      <a href="/mix.html">Mixy mixy</a>
+    </button>
 
     <div class="transport-animation">
       <svg
@@ -409,6 +422,11 @@
         <div class="scrolling-skyline"></div>
       </div>
     </div>
-    <button><a href="/transport.html">Transport</a></button>
+
+    <br />
+
+    <button>
+      <a href="/transport.html">Transport</a>
+    </button>
   </body>
 </html>
